--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,88 +1,110 @@
-<div class="container">
-    <app-loader *ngIf="isLoaderVisible"></app-loader>
-    <div class="row">
-       
-       <!-- <div *ngIf="isEmailErrorVisible">
-            <div  *ngFor="let email_error of email_error">
-                {{ email_error }}
-            </div>
-       </div>
-       <div *ngIf="isPasswordErrorVisible">
-            <div class="error" *ngFor="let password_error of password_error">
-                {{ password_error }}
-            </div>
-       </div>
-       <div *ngIf="isFirstnameErrorVisible">
-            <div class="error" *ngFor="let first_name_error of first_name_error">
-                {{ first_name_error }}
-            </div>
-        </div>
-        <div *ngIf="isLastnameErrorVisible">
-            <div class="error" *ngFor="let last_name_error of last_name_error">
-                {{ last_name_error }}
-            </div>
-        </div> -->
-        <div class="col-md-6"> 
-            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="my_form">   
-                <div class="form-group">
-                    <label for="firstname">First Name </label>
-                    <input type="text" id="first_name" name="first_name" formControlName="first_name" class="form-control">
-                    
-                    <div *ngIf="registerForm.controls['first_name'].invalid && (registerForm.controls['first_name'].dirty || registerForm.controls['first_name'].touched)"
-                    class="alert alert-danger">
-                
-                        <div *ngIf="registerForm.controls['first_name'].errors?.['required']">
-                            First name is required.
-                        </div>
-                        
-                    </div>
+<section id = "signup">
+    <div class="container">
+        <app-loader *ngIf="isLoaderVisible"></app-loader>
+        <div class="row">
+           
+           <!-- <div *ngIf="isEmailErrorVisible">
+                <div  *ngFor="let email_error of email_error">
+                    {{ email_error }}
                 </div>
-        
-                <div class="form-group">
-                    <label for="lastname">Last Name</label>
-                    <input type="text" id="last_name" name="last_name" formControlName="last_name" class="form-control">
-                    
-                    <div *ngIf="registerForm.controls['last_name'].invalid && (registerForm.controls['last_name'].dirty || registerForm.controls['last_name'].touched)"
-                    class="alert alert-danger">
-                
-                        <div *ngIf="registerForm.controls['last_name'].errors?.['required']">
-                            Last name is required.
-                        </div>
-                        
-                    </div>
+           </div>
+           <div *ngIf="isPasswordErrorVisible">
+                <div class="error" *ngFor="let password_error of password_error">
+                    {{ password_error }}
                 </div>
-                
-                <div class="form-group">
-                    <label for="email">Email </label>
-                    <input type="text" id="email" name="email" formControlName="email" class="form-control">
-                    
-                    <div *ngIf="registerForm.controls['email'].invalid && (registerForm.controls['email'].dirty || registerForm.controls['email'].touched)"
-                    class="alert alert-danger">
-                
-                        <div *ngIf="registerForm.controls['email'].errors?.['required']">
-                            Email is required.
-                        </div>
-                        <div *ngIf="registerForm.controls['email'].errors?.['email']">
-                            Email should be valid.
-                        </div>
-                    </div>
+           </div>
+           <div *ngIf="isFirstnameErrorVisible">
+                <div class="error" *ngFor="let first_name_error of first_name_error">
+                    {{ first_name_error }}
                 </div>
-                <div class="form-group">
-                    <label for="password">password</label>
-                    <input type="password" id="password" name="password" formControlName="password" class="form-control">
-                    <div *ngIf="registerForm.controls['password'].invalid && (registerForm.controls['password'].dirty || registerForm.controls['password'].touched)"
-                    class="alert alert-danger">
-                        <div *ngIf="registerForm.controls['password'].errors?.['required']">
-                            Password name is required.
+            </div>
+            <div *ngIf="isLastnameErrorVisible">
+                <div class="error" *ngFor="let last_name_error of last_name_error">
+                    {{ last_name_error }}
+                </div>
+            </div> -->
+            <div class="col-md-12"> 
+                <div class = "box">
+                   
+                   
+                    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="my_form">
+                        <div class = "py-2 text-center">
+                            <h3>Sign Up</h3>
                         </div>   
-                        <div *ngIf="registerForm.controls['password'].errors?.['pattern']">
-                           <p>The password must be at least 8 characters</p>
-                           <p>Password must contains at least 1 Uppercase, 1 Lowercase, 1 Digit, 1 Special character</p>
-                        </div>  
+                        <div class="form-group py-2">
+                            <label for="firstname">First Name </label>
+                            <input type="text" id="first_name" name="first_name" formControlName="first_name" class="form-control">
+                            
+                            <div *ngIf="registerForm.controls['first_name'].invalid && (registerForm.controls['first_name'].dirty || registerForm.controls['first_name'].touched)"
+                            class="alert alert-danger">
+                        
+                                <div *ngIf="registerForm.controls['first_name'].errors?.['required']">
+                                    First name is required.
+                                </div>
+                                
+                            </div>
+                        </div>
+                
+                        <div class="form-group py-2">
+                            <label for="lastname">Last Name</label>
+                            <input type="text" id="last_name" name="last_name" formControlName="last_name" class="form-control">
+                            
+                            <div *ngIf="registerForm.controls['last_name'].invalid && (registerForm.controls['last_name'].dirty || registerForm.controls['last_name'].touched)"
+                            class="alert alert-danger">
+                        
+                                <div *ngIf="registerForm.controls['last_name'].errors?.['required']">
+                                    Last name is required.
+                                </div>
+                                
+                            </div>
+                        </div>
+                        
+                        <div class="form-group py-2">
+                            <label for="email">Email </label>
+                            <input type="text" id="email" name="email" formControlName="email" class="form-control">
+                            
+                            <div *ngIf="registerForm.controls['email'].invalid && (registerForm.controls['email'].dirty || registerForm.controls['email'].touched)"
+                            class="alert alert-danger">
+                        
+                                <div *ngIf="registerForm.controls['email'].errors?.['required']">
+                                    Email is required.
+                                </div>
+                                <div *ngIf="registerForm.controls['email'].errors?.['email']">
+                                    Email should be valid.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group py-2">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password" formControlName="password" class="form-control">
+                            <div *ngIf="registerForm.controls['password'].invalid && (registerForm.controls['password'].dirty || registerForm.controls['password'].touched)"
+                            class="alert alert-danger">
+                                <div *ngIf="registerForm.controls['password'].errors?.['required']">
+                                    Password name is required.
+                                </div>   
+                                <div *ngIf="registerForm.controls['password'].errors?.['pattern']">
+                                   <p>The password must be at least 8 characters</p>
+                                   <p>Password must contains at least 1 Uppercase, 1 Lowercase, 1 Digit, 1 Special character</p>
+                                </div>  
+                            </div>
+                        </div>
+                        <div class = "text-center">
+                            <button type="button" class="btn  blue-btn text-center" [disabled]="formValidate || !registerForm.valid">Submit</button>
+                        </div>
+                       
+                    </form>
+                    <div  class = "text-center pt-4">
+                       <p class = "mb-0">Already have an Account?</p>
+                       <button type  = "button" class = "btn" routerLink = "/login">Login</button>
+                    </div>
+                    <div class = "background">
+                        <div class = "shape"></div>
+                        <div class = "shape"></div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary text-center" [disabled]="formValidate || !registerForm.valid">Submit</button>
-            </form>
+               
+            </div>
+            
         </div>
     </div>
-</div>
+</section>
