--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,35 +1,56 @@
-<div class="container">
-    <app-loader *ngIf="isLoaderVisible"></app-loader>  
-    <div class="row">
-        <div class="col-md-6"> 
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="my_form">   
-                <div class="form-group">
-                    <label for="email">Email </label>
-                    <input type="text" id="email" name="email" formControlName="email" class="form-control">
+<section id = "login">
+    <div class="container">
+        <app-loader *ngIf="isLoaderVisible"></app-loader>  
+        <div class="row">
+            <div class="col-md-12"> 
+                <div class = "box">
                     
-                    <div *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)"
-                    class="alert alert-danger">
-                
-                        <div *ngIf="loginForm.controls['email'].errors?.['required']">
-                            Email is required.
+                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="my_form"> 
+                        <div class = "py-2 text-center">
+                            <h3>Login</h3>
+                        </div>   
+                        <div class="form-group py-2">
+                            <label for="email">Email </label>
+                            <input type="text" id="email" name="email" formControlName="email" class="form-control">
+                            
+                            <div *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)"
+                            class="alert alert-danger">
+                        
+                                <div *ngIf="loginForm.controls['email'].errors?.['required']">
+                                    Email is required.
+                                </div>
+                                <div *ngIf="loginForm.controls['email'].errors?.['email']">
+                                    Email should be valid.
+                                </div>
+                            </div>
                         </div>
-                        <div *ngIf="loginForm.controls['email'].errors?.['email']">
-                            Email should be valid.
+                        <div class="form-group py-2">
+                            <label for="password">password</label>
+                            <input type="password" id="password" name="password" formControlName="password" class="form-control">
+                            <div *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)"
+                            class="alert alert-danger">
+                                <div *ngIf="loginForm.controls['password'].errors?.['required']">
+                                    Password name is required.
+                                </div>     
+                            </div>
                         </div>
+                        <div class = "text-center mt-3">
+                            <button type="submit" class="btn blue-btn text-center" [disabled]="!loginForm.valid">Submit</button>
+                        </div>
+                        
+                    </form>
+                    <div  class = "text-center pt-4">
+                        <p class = "mb-0">Don’t have an account?</p>
+                        <button type  = "button" class = "btn" routerLink = "/signup">Signup</button>
+                     </div>
+                    <div class = "background">
+                        <div class = "shape"></div>
+                        <div class = "shape"></div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="password">password</label>
-                    <input type="password" id="password" name="password" formControlName="password" class="form-control">
-                    <div *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)"
-                    class="alert alert-danger">
-                        <div *ngIf="loginForm.controls['password'].errors?.['required']">
-                            Password name is required.
-                        </div>     
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary text-center" [disabled]="!loginForm.valid">Submit</button>
-            </form>
+               
+            </div>
         </div>
     </div>
-</div>
+
+</section>
