--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
 html,body {
   height: 100%;
   width: 100%;
-overflow: auto;
+ 
 }
 
 html {
@@ -180,6 +180,12 @@ section{
   width: 200px !important;
 }
 
+.black-btn:hover{
+	
+	background: #00000080 !important;
+	color:#fff;
+}
+
 .blue-btn{
   font-weight: 800;
   color: #000;
@@ -188,19 +194,21 @@ section{
   background-size:cover;
   font-size: 18px;
   text-transform: uppercase;
+  text-align: left;
+  width: 200px;
+  transition: 0.5s;
   
-}
-section p{
-  padding-left: 2rem;
 }
 
 section .blue-btn{
-  padding:1rem 2rem 1rem 1rem;
+  padding:1rem;
   margin-left: 1rem;
 }
 
 section .blue-btn:hover{
-  padding:1rem 5rem 1rem 1rem;
+	color: #000 !important;
+  transform: translateX(10px);
+  
 }
 
 
@@ -333,6 +341,9 @@ section .blue-btn:hover{
 	background-image: url("assets/img/sec-bg1.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
+	p{
+		padding-left: 2rem;
+	}
 	h2 {
 		&::after {
 			content: '';
@@ -410,6 +421,9 @@ section .blue-btn:hover{
 		max-width: 800px !important;
 		width: 100%;
 	}
+	p{
+		padding-left: 2rem;
+	}
 	margin-top: -10rem;
 	background-image: transparent;
 	h2 {
@@ -443,6 +457,9 @@ section .blue-btn:hover{
 	background-image: url("assets/img/sec-bg2.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
+	p{
+		padding-left: 2rem;
+	}
 	h2 {
 		&::after {
 			content: '';
@@ -502,55 +519,75 @@ section .blue-btn:hover{
 /***********Section4 css End********/
 /************Section 5 CSS Start************/
 #section5 {
-	h2 {
-		&::after {
-			content: '';
-			position: relative;
-			display: block;
-			width: 40px;
-			height: 3px;
-			background: #627b80;
+	.title {
+		color: #1a1a1a;
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	.content {
+		-webkit-clip-path: polygon( 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25% );
+		-moz-clip-path: polygon( 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25% );
+		-ms-clip-path: polygon( 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25% );
+		clip-path: polygon( 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25% );
+		position: relative;
+		width: 100%;
+		margin: auto;
+		overflow: hidden;
+		.content-overlay {
+			background: rgba(0, 0, 0, 0.7);
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			left: 0;
+			top: 0;
 			bottom: 0;
-			margin-top: 5px;
+			right: 0;
+			opacity: 0;
+			-webkit-transition: all 0.4s ease-in-out 0s;
+			-moz-transition: all 0.4s ease-in-out 0s;
+			transition: all 0.4s ease-in-out 0s;
+		}
+		&:hover {
+			.content-overlay {
+				opacity: 1;
+			}
+			.content-details {
+				top: 50%;
+				left: 50%;
+				opacity: 1;
+			}
 		}
 	}
-	.box {
-		position: relative;
+	.content-image {
+		width: 100%;
 	}
-	.box-content {
+	img {
+		box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
+		border-radius: 5px;
+	}
+	.content-details {
 		position: absolute;
-		bottom: 20px;
-		left: 20px;
+		text-align: center;
+		padding-left: 1em;
+		padding-right: 1em;
+		width: 100%;
+		top: 50%;
+		left: 50%;
+		opacity: 0;
+		-webkit-transform: translate(-50%, -50%);
+		-moz-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+		-webkit-transition: all 0.3s ease-in-out 0s;
+		-moz-transition: all 0.3s ease-in-out 0s;
+		transition: all 0.3s ease-in-out 0s;
 		h3 {
+			text-transform: uppercase;
 			color: #fff;
 		}
 		button {
+			color: #fff;
 			border: 1px solid #fff;
 			border-radius: 0px;
-			color: #fff;
-		}
-	}
-	figure {
-		width: 100%;
-		margin: 0;
-		padding: 0;
-		background: #fff;
-		overflow: hidden;
-	}
-	.hover06 {
-		figure {
-			img {
-				-webkit-transform: rotate(15deg) scale(1.4);
-				transform: rotate(15deg) scale(1.4);
-				-webkit-transition: .3s ease-in-out;
-				transition: .3s ease-in-out;
-			}
-			&:hover {
-				img {
-					-webkit-transform: rotate(0) scale(1);
-					transform: rotate(0) scale(1);
-				}
-			}
 		}
 	}
 }
@@ -561,6 +598,10 @@ section .blue-btn:hover{
 /************section 6 css start*********/
 
 #section6 {
+
+	p{
+		padding-left: 2rem;
+	}
 	h2 {
 		&::after {
 			content: '';
@@ -584,7 +625,6 @@ section .blue-btn:hover{
 	}
 	.col-md-4.col-12 {
 		padding-top: 9rem;
-		padding-left: 3rem;
 	}
 	.sec6-img {
 		position: relative;
@@ -600,19 +640,19 @@ section .blue-btn:hover{
 		&:hover {
 			img {
 				&:nth-child(4) {
-					transform: translate(-120px, 120px);
+					transform: translate(-60px, 60px);
 					opacity: 1;
 				}
 				&:nth-child(3) {
-					transform: translate(-80px, 80px);
+					transform: translate(-40px, 40px);
 					opacity: 0.8;
 				}
 				&:nth-child(2) {
-					transform: translate(-40px,40px);
+					transform: translate(-20px,20px);
 					opacity: 0.6;
 				}
 				&:nth-child(1) {
-					transform: translate(-10px, 10px);
+					transform: translate(-0px, 0px);
 					opacity: 0.4;
 				}
 			}
@@ -624,10 +664,10 @@ section .blue-btn:hover{
 
 /***********section 7 css starts**********/
 #section7 {
-	background-image: url("assets/img/sec-bg2.png");
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
+
+	p{
+		padding-left: 2rem;
+	}
 	h2 {
 		&::after {
 			content: '';
@@ -717,9 +757,335 @@ section .blue-btn:hover{
 	img {
 		width: 100%;
 	}
+	.slick-arrow{
+		display: none !important;
+	}
 }
 
 
 /**************Section 8 css End ************/
 
+/*=============(Signup & Login CSS Starts)===============*/
+
+
+
+/************Signup css*********/
+#signup {
+	background-image: url("assets/img/signup-bg.jpg");
+	background-attachment: fixed;
+	.container {
+		max-width: 600px !important;
+		width: 100%;
+	}
+	.box {
+		position: relative;
+		background-color: #fff;
+		margin: 3rem;
+		padding: 2rem;
+		box-shadow: 0 0 10px #0000004a;
+		border-radius: 20px;
+		input {
+			height: 40px;
+		}
+		.blue-btn {
+			width: 200px;
+			cursor: pointer;
+			margin-top: 1rem;
+		}
+		button.btn {
+			&:disabled {
+				pointer-events: auto;
+				opacity: 1;
+			}
+			font-weight: 800;
+		}
+		.background {
+			.shape {
+				height: 100px;
+				width: 100px;
+				position: absolute;
+				border-radius: 50%;
+			}
+		}
+		.shape {
+			&:first-child {
+				background-image: url("assets/img/sign-shape.jpg");
+				left: -40px;
+				top: -40px;
+				background-size: contain;
+			}
+			&:last-child {
+				background-image: url("assets/img/sign-shape.jpg");
+				right: -40px;
+				bottom: -40px;
+				background-size: contain;
+			}
+		}
+		.alert-danger {
+			background-color: transparent !important;
+			border: unset !important;
+			color: #ff0017;
+			padding: 0.5rem 0rem 0rem 0rem !important;
+		}
+		p {
+			font-weight: 500;
+		}
+	}
+}
+
+
+/************login css*********/
+
+#login {
+	background-image: url("assets/img/signup-bg.jpg");
+	background-attachment: fixed;
+	.container {
+		max-width: 600px !important;
+		width: 100%;
+	}
+	.box {
+		position: relative;
+		background-color: #fff;
+		margin: 3rem;
+		padding: 2rem;
+		box-shadow: 0 0 10px #0000004a;
+		border-radius: 20px;
+		input {
+			height: 40px;
+		}
+		.blue-btn {
+			width: 200px;
+			cursor: pointer;
+			margin-top: 1rem;
+		}
+		button.btn {
+			&:disabled {
+				pointer-events: auto;
+				opacity: 1;
+			}
+		}
+		.background {
+			.shape {
+				height: 100px;
+				width: 100px;
+				position: absolute;
+				border-radius: 50%;
+			}
+		}
+		.shape {
+			&:first-child {
+				background-image: url("assets/img/sign-shape.jpg");
+				left: -40px;
+				top: -40px;
+				background-size: contain;
+			}
+			&:last-child {
+				background-image: url("assets/img/sign-shape.jpg");
+				right: -40px;
+				bottom: -40px;
+				background-size: contain;
+			}
+		}
+	}
+}
+
+
+
+/****=============(Responsive CSS)============******/
+
+@media(max-width:991px) {
+	h1, .h1 {
+	  font-size: 40px !important;
+	  line-height: 50px !important;
+	}
+	h2, .h2 {
+	  font-size: 32px !important;
+	  line-height: 39px !important;
+	}
+	h3, .h3 {
+	  font-size: 24px !important;
+	  line-height: 36px !important;
+	}
+	h4, .h4 {
+	  font-size: 19px !important;
+	  line-height: 28px !important;
+	}
+	h5, .h5 {
+	  font-size: 17px !important;
+	  line-height: 26px !important;
+	}
+	h6, .h6 {
+	  font-size: 15px !important;
+	  line-height: 22px !important;
+	}
+
+	section {
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+	}
+	
+
+	#section1 .col-md-6:last-child {
+		padding-top: 1rem;
+	}
+
+	.sec1-col2{
+		padding-bottom:1rem;
+	}
+	
+
+  }
+  
+  @media(max-width:768px) {
+	h1, .h1 {
+	  font-size: 36px !important;
+	  line-height: 45px !important;
+	}
+	h2, .h2 {
+	  font-size: 30px !important;
+	  line-height: 35px !important;
+	}
+	h3, .h3 {
+	  font-size: 22px !important;
+	  line-height: 32px !important;
+	}
+	h4, .h4 {
+	  font-size: 18px !important;
+	  line-height: 25px !important;
+	}
+	h5, .h5 {
+	  font-size: 16px !important;
+	  line-height: 23px !important;
+	}
+	h6, .h6 {
+	  font-size: 14px !important;
+	  line-height: 21px !important;
+	}
+	p {
+	  font-size: 14px;
+	  line-height: 21px;
+	}
+
+	#section6 .col-md-4.col-12 {
+		padding-top: 1rem;
+	}
+
+	.top-footer .col-md-3 {
+		width: 50%;
+	}
+
+  }
+  
+  @media(max-width:576px) {
+	h1, .h1 {
+	  font-size: 36px !important;
+	  line-height: 45px !important;
+	}
+	h2, .h2 {
+	  font-size: 30px !important;
+	  line-height: 35px !important;
+	}
+	h3, .h3 {
+	  font-size: 22px !important;
+	  line-height: 32px !important;
+	}
+	h4, .h4 {
+	  font-size: 18px !important;
+	  line-height: 25px !important;
+	}
+	h5, .h5 {
+	  font-size: 16px !important;
+	  line-height: 23px !important;
+	}
+	h6, .h6 {
+	  font-size: 14px !important;
+	  line-height: 21px !important;
+	}
+	
+
+	.top-footer .col-md-3 {
+		width: 100%;
+	}
+
+  
+  
+  }
+  
+  @media(max-width:470px) {
+	h1, .h1 {
+	  font-size: 34px !important;
+	  line-height: 40px !important;
+	}
+	h2, .h2 {
+	  font-size: 28px !important;
+	  line-height: 30px !important;
+	}
+	h3, .h3 {
+	  font-size: 20px !important;
+	  line-height: 28px !important;
+	}
+	h4, .h4 {
+	  font-size: 17px !important;
+	  line-height: 24px !important;
+	}
+	h5, .h5 {
+	  font-size: 15px !important;
+	  line-height: 22px !important;
+	}
+	h6, .h6 {
+	  font-size: 14px !important;
+	  line-height: 21px !important;
+	}
+	
+   
+  }
+  
+  @media(max-width:360px) {
+	h1, .h1 {
+	  font-size: 32px !important;
+	  line-height: 39px !important;
+	}
+	h2, .h2 {
+	  font-size: 26px !important;
+	  line-height: 30px !important;
+	}
+	h3, .h3 {
+	  font-size: 20px !important;
+	  line-height: 28px !important;
+	}
+	h4, .h4 {
+	  font-size: 17px !important;
+	  line-height: 24px !important;
+	}
+	h5, .h5 {
+	  font-size: 15px !important;
+	  line-height: 22px !important;
+	}
+	h6, .h6 {
+	  font-size: 14px !important;
+	  line-height: 21px !important;
+	}
+  
+	
+  }
+  
+  @media (min-width: 768px) {
+   
+
+  
+  }
+  
+  @media(min-width:991px) {
+
+  }
+  
+  
+  
+  @media (min-width: 576px) {
+
+  
+  }
+  
+  
+  
 
