--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class = "container">
     <div class = 'text-center'>
       <h1 class = "mb-0">We provide Ultimate Patterns & Cosy Rugs</h1>
-      <h6 class = "py-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
+      <h6 class = "py-4 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
         text of the printing and typesetting industry.
       </h6>
       <button type = "button" class= "btn black-btn">Find More</button>
@@ -14,7 +14,7 @@
 <!-----------Section1 Start---------->
 <section id = "section1">
   <div class = "container">
-    <div class = "row">
+    <div class = "row flex-column-reverse flex-lg-row flex-md-row">
       <div class = "col-md-6">
         <div class = "sec1-img">
           <img src = "assets/img/sec1-img.png" width="100%">
@@ -23,7 +23,7 @@
       <div class = "col-md-6">
         <div class = "sec1-col2">
           <h2>Our Story</h2>
-          <p class = "py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique quo velit, facilis iure ea magni sequi voluptatum ratione beatae harum corrupti eos ut ipsa vero ex natus porro suscipit, deleniti asperiores ducimus rerum totam! Autem impedit cumque, nostrum ut veritatis quis blanditiis quidem, magnam aliquam maiores, error minima rem?</p>
+          <p class = "py-3 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique quo velit, facilis iure ea magni sequi voluptatum ratione beatae harum corrupti eos ut ipsa vero ex natus porro suscipit, deleniti asperiores ducimus rerum totam! Autem impedit cumque, nostrum ut veritatis quis blanditiis quidem, magnam aliquam maiores, error minima rem?</p>
           <button type = "button" class = "btn blue-btn">Our Story</button>
         </div>
       </div>
@@ -43,7 +43,7 @@
   <div class = "container">
     <div class = "box">
       <h2>Our Success</h2>
-      <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. Praesent tincidunt, dolor vitae rutrum tincidunt, lacus lectus euismod justo, ut tincidunt erat lorem ut ex. Fusce vitae interdum lorem. Aliquam blandit facilisis risus non fringilla. Duis accumsan nulla at ligula vehicula, quis fermentum nisl dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. </p>
+      <p class = "py-3 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. Praesent tincidunt, dolor vitae rutrum tincidunt, lacus lectus euismod justo, ut tincidunt erat lorem ut ex. Fusce vitae interdum lorem. Aliquam blandit facilisis risus non fringilla. Duis accumsan nulla at ligula vehicula, quis fermentum nisl dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. </p>
       <button type = "button" class = "btn blue-btn">Our Success</button>
     </div>
   </div>
@@ -52,15 +52,15 @@
 <!-----------Section 4 starts--------->
 <section id = "section4">
   <div class = "container">
-    <div class = "row">
-      <div class = "col-md-6">
+    <div class = "row ">
+      <div class = "col-lg-6 col-12">
         <div class = "sec1-col2">
           <h2>Meet Resolute</h2>
-          <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.</p>
+          <p class = "py-3 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.</p>
           <button type = "button" class = "btn blue-btn">Shop Now</button>
         </div>
       </div>
-      <div class = "col-md-6">
+      <div class = "col-lg-6 col-12">
         <div class ="sec4-img">
           <img src = "assets/img/sec4-img.png" width="100%">
         </div>
@@ -72,6 +72,9 @@
 <!-----------Section 5 starts--------->
 <section id = "section5">
   <div class="container">
+    <div>
+      <h2>Rugs Accordance</h2>
+    </div>
     <div class="row">
       <div class="col-md-6">
         <div class="content">
@@ -128,31 +131,26 @@
 <!-----------Section 6 Starts--------->
 <section id = "section6">
   <div class = "container">
-    <div class = "row">
+    
+    <div class = "row flex-column-reverse flex-lg-row flex-md-row">
       <div class = "col-lg-8 col-12">
         <div class = "row">
-          <div class = "col-md-6 col-12">
-            <div class = "sec6-img">
-              <img src = "assets/img/sec6-img1.jpg" width="100%">
-              <img src = "assets/img/sec6-img1.jpg" width="100%">
-              <img src = "assets/img/sec6-img1.jpg" width="100%">
-              <img src = "assets/img/sec6-img1.jpg" width="100%">
-            </div>
+          <div class = "col-lg-6 col-12">
+            <div class="hover-effect">
+              <img src="assets/img/sec6-img1.jpg" alt="images">
+             </div>
           </div>
           <div class = "col-lg-6 col-12">
-            <div class = "sec6-img">
-              <img src = "assets/img/sec6-img2.jpg" width="100%">
-              <img src = "assets/img/sec6-img2.jpg" width="100%">
-              <img src = "assets/img/sec6-img2.jpg" width="100%">
-              <img src = "assets/img/sec6-img2.jpg" width="100%">
-            </div>
+            <div class="hover-effect">
+              <img src="assets/img/sec6-img2.jpg" alt="images">
+              </div>
           </div>
         </div>
       </div>
       <div class = "col-lg-4 col-12">
         <div>
           <h2>Flat & Knotted</h2>
-          <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+          <p class = "py-3 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
           <button type = "button" class = "btn blue-btn">Find More</button>
         </div>
       </div>
