--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,20 +2,24 @@
   <div class = "top-footer">
     <div class = "container">
       <div class = "row">
-        <div class = "col-md-3 col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6  col-sm-6 col-12">
           <div>
             <h4>About Us</h4>
             <p class = "mb-0 pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In auctor egestas purus, at pharetra urna. Aliquam commodo eu justo in iaculis. Nulla facilisi. </p>
           </div>
         </div>
-        <div class = "col-md-3 col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
           <div>
             <h4>Company</h4>
             <ul class = "navbar-nav">
-              <li class = "nav-item" *ngFor="let company of company">
+           <!----   <li class = "nav-item" *ngFor="let company of company">
                 <a [routerLink] = "company.link" class = "nav-link">{{company.menu_title}}</a>
-              </li>
-              <!-- <li class = "nav-item">
+              </li>  -->
+
+              <li class = "nav-item">
+                <a href = "#" class = "nav-link">Home</a>
+                </li>
+              <li class = "nav-item">
                 <a href = "#" class = "nav-link">Visit Us</a>
                 </li>
                 <li class = "nav-item">
@@ -23,18 +27,21 @@
                 </li>
                 <li class = "nav-item">
                 <a href = "#" class = "nav-link">Our Story</a>
-                </li> -->
+                </li>
             </ul>
           </div>
         </div>
-        <div class = "col-md-3 col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
           <div>
             <h4>Support</h4>
             <ul class = "navbar-nav">
-              <li class = "nav-item" *ngFor="let supportLinks of support">
+            <!---- <li class = "nav-item" *ngFor="let supportLinks of support">
                 <a [routerLink]="['pages', supportLinks.seo_title]" class = "nav-link">{{supportLinks.title}}</a>
-              </li>
-              <!-- <li class = "nav-item">
+              </li>  -->
+              <li class = "nav-item">
+                <a href = "#" class = "nav-link">Our Story</a>
+                </li>
+                <li class = "nav-item">
                 <a href = "#" class = "nav-link">Career</a>
                 </li>
                 <li class = "nav-item">
@@ -42,12 +49,12 @@
                 </li>
                 <li class = "nav-item">
                 <a href = "#" class = "nav-link">Privacy & Cookie policy</a>
-                </li> -->
+                </li> 
             </ul>
           </div>
         </div>
-        <div class = "col-md-3 col-sm-6 col-12">
-          <div>
+        <div class = "col-lg-3 col-md-6  col-sm-6 col-12">
+          <div class = "contact_details">
             <h4>Contact Us</h4>
             <div>
               <h6>
