--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-md-auto  gap-2 nav-pills" >
-          <li class="nav-item rounded" *ngFor="let menu of menu">
+        <!---- <li class="nav-item rounded" *ngFor="let menu of menu">
             <div *ngIf="!menu.children; else parentMenu">
             <a class="nav-link"  [routerLink]="menu.link" routerLinkActive = "active" [routerLinkActiveOptions] = "{exact : true}">{{menu.menu_title}}</a>
             </div>
@@ -22,8 +22,11 @@
               </div>
             </ng-template>
           </li>
-
-          <!-- <li class="nav-item rounded">
+        -->
+        <li class="nav-item rounded">
+          <a class="nav-link "  routerLink = "" routerLinkActive = "active"[routerLinkActiveOptions] = "{exact : true}">Home</a>
+        </li>
+         <li class="nav-item rounded">
             <a class="nav-link" routerLink = "about" routerLinkActive = "active">Visit Us</a>
           </li>
           <li class="nav-item rounded">
@@ -31,24 +34,31 @@
           </li>
           <li class="nav-item rounded">
             <a class="nav-link" routerLink = "contact" routerLinkActive = "active">Our Story</a>
-          </li> -->
+          </li>
         </ul>
         <div  class = "ms-4">
           <a href = "#">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
-              <desc>Created with Fabric.js 1.7.22</desc>
-              <defs>
-              </defs>
-              <g transform="translate(128 128) scale(0.72 0.72)">
-                <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
-                  <path d="M 24.158 57.596 h 54.898 c 2.293 0 4.313 -1.509 4.964 -3.709 l 5.841 -19.759 c 0.633 -2.141 -0.972 -4.289 -3.204 -4.289 H 16.95 L 24.158 57.596 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                  <path d="M 79.585 70.399 H 27.091 c -0.687 0 -1.287 -0.464 -1.46 -1.129 L 14.404 26.034 c -0.421 -1.62 -1.883 -2.751 -3.557 -2.751 H 1.508 C 0.675 23.283 0 22.608 0 21.775 s 0.675 -1.508 1.508 -1.508 h 9.339 c 3.048 0 5.711 2.06 6.476 5.01 l 10.935 42.106 h 51.327 c 0.833 0 1.508 0.676 1.508 1.508 C 81.093 69.724 80.417 70.399 79.585 70.399 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                  <circle cx="36.176" cy="80.946" r="6.536" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform="  matrix(1 0 0 1 0 0) "/>
-                  <circle cx="69.15599999999999" cy="80.946" r="6.536" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform="  matrix(1 0 0 1 0 0) "/>
-                  <path d="M 43.198 35.321 c -0.57 0 -1.137 -0.179 -1.621 -0.53 c -0.856 -0.623 -1.277 -1.657 -1.098 -2.7 l 1.379 -8.044 c 0.042 -0.247 -0.039 -0.498 -0.218 -0.673 l -5.845 -5.697 c -0.758 -0.739 -1.025 -1.823 -0.698 -2.83 s 1.181 -1.727 2.228 -1.879 l 8.077 -1.173 c 0.248 -0.036 0.462 -0.191 0.572 -0.416 l 3.613 -7.319 c 0.468 -0.949 1.416 -1.539 2.476 -1.539 c 1.059 0 2.007 0.59 2.475 1.539 l 3.612 7.319 c 0.111 0.224 0.325 0.38 0.573 0.416 l 8.076 1.173 c 1.048 0.152 1.901 0.873 2.228 1.879 c 0.327 1.007 0.06 2.091 -0.698 2.831 l -5.844 5.696 c -0.18 0.175 -0.262 0.427 -0.22 0.674 l 1.38 8.043 c 0.179 1.044 -0.242 2.078 -1.099 2.7 c -0.855 0.622 -1.971 0.702 -2.906 0.21 l -7.225 -3.798 c -0.222 -0.118 -0.486 -0.116 -0.707 0 l -7.225 3.798 C 44.077 35.215 43.636 35.321 43.198 35.321 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(244,219,63); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                </g>
-              </g>
-            </svg>
+            
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
+  <desc>Created with Fabric.js 1.7.22</desc>
+  <defs>
+  </defs>
+  <g transform="translate(128 128) scale(0.72 0.72)" style="">
+    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
+    <path d="M 77.429 61.513 H 24.313 c -0.939 0 -1.752 -0.653 -1.954 -1.571 l -8.418 -38.356 c -0.13 -0.592 0.016 -1.21 0.395 -1.682 c 0.38 -0.472 0.953 -0.747 1.559 -0.747 H 88 c 0.568 0 1.11 0.242 1.489 0.665 c 0.38 0.423 0.561 0.988 0.499 1.553 l -3.515 32.032 C 85.966 58.028 82.077 61.513 77.429 61.513 z M 25.921 57.513 h 51.507 c 2.605 0 4.784 -1.953 5.068 -4.543 l 3.271 -29.813 H 18.381 L 25.921 57.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 54.052 61.513 c -1.104 0 -2 -0.896 -2 -2 V 21.156 c 0 -1.104 0.896 -2 2 -2 s 2 0.896 2 2 v 38.356 C 56.052 60.617 55.156 61.513 54.052 61.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 68.785 61.513 c -0.055 0 -0.11 -0.002 -0.166 -0.007 c -1.101 -0.091 -1.92 -1.057 -1.829 -2.157 l 3.157 -38.356 c 0.091 -1.101 1.054 -1.924 2.157 -1.829 c 1.101 0.09 1.92 1.056 1.829 2.157 l -3.157 38.356 C 70.69 60.722 69.815 61.513 68.785 61.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 39.318 61.513 c -1.007 0 -1.873 -0.758 -1.986 -1.782 l -4.209 -38.356 c -0.12 -1.098 0.672 -2.086 1.77 -2.207 c 1.101 -0.114 2.085 0.672 2.207 1.77 l 4.209 38.357 c 0.12 1.098 -0.672 2.085 -1.77 2.206 C 39.464 61.509 39.391 61.513 39.318 61.513 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 85.896 42.334 H 20.104 c -1.104 0 -2 -0.896 -2 -2 s 0.896 -2 2 -2 h 65.792 c 1.104 0 2 0.896 2 2 S 87 42.334 85.896 42.334 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 34.219 81.663 c -4.249 0 -7.705 -3.456 -7.705 -7.705 s 3.457 -7.705 7.705 -7.705 s 7.705 3.456 7.705 7.705 S 38.467 81.663 34.219 81.663 z M 34.219 70.253 c -2.043 0 -3.705 1.662 -3.705 3.705 s 1.662 3.705 3.705 3.705 s 3.705 -1.662 3.705 -3.705 S 36.262 70.253 34.219 70.253 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 73.16 81.663 c -4.249 0 -7.705 -3.456 -7.705 -7.705 s 3.456 -7.705 7.705 -7.705 s 7.705 3.456 7.705 7.705 S 77.409 81.663 73.16 81.663 z M 73.16 70.253 c -2.043 0 -3.705 1.662 -3.705 3.705 s 1.662 3.705 3.705 3.705 s 3.705 -1.662 3.705 -3.705 S 75.203 70.253 73.16 70.253 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 29.17 73.304 h -3.171 c -4.354 0 -7.896 -3.542 -7.896 -7.896 s 3.542 -7.896 7.896 -7.896 c 1.104 0 2 0.896 2 2 s -0.896 2 -2 2 c -2.148 0 -3.896 1.747 -3.896 3.896 s 1.748 3.896 3.896 3.896 h 3.171 c 1.104 0 2 0.896 2 2 S 30.275 73.304 29.17 73.304 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 68.112 73.304 H 39.32 c -1.104 0 -2 -0.896 -2 -2 s 0.896 -2 2 -2 h 28.792 c 1.104 0 2 0.896 2 2 S 69.217 73.304 68.112 73.304 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 82.249 73.304 h -3.384 c -1.104 0 -2 -0.896 -2 -2 s 0.896 -2 2 -2 h 3.384 c 1.104 0 2 0.896 2 2 S 83.354 73.304 82.249 73.304 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+    <path d="M 15.893 23.157 c -0.919 0 -1.747 -0.637 -1.952 -1.572 l -0.566 -2.582 c -0.848 -3.862 -4.333 -6.666 -8.287 -6.666 H 2 c -1.104 0 -2 -0.896 -2 -2 s 0.896 -2 2 -2 h 3.087 c 5.818 0 10.947 4.125 12.194 9.808 l 0.566 2.582 c 0.237 1.079 -0.446 2.146 -1.525 2.382 C 16.179 23.142 16.035 23.157 15.893 23.157 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+  </g>
+  </g>
+  </svg>
           </a>
         </div>
       </div>
