--- a/src/app/nodata/nodata.component.html
+++ b/src/app/nodata/nodata.component.html
@@ -1,6 +1,8 @@
-<div class = "container">
-    <div class = "text-center">
-       <h1>404 Page Not Found</h1>
+<section id = "page_404">
+    <div class = "container ">
+        <div class = "text-center">
+           <h1>404 Page Not Found</h1>
+        </div>
+    
     </div>
-
-</div>
+</section>
